<resources>
    <string name="app_name">玩安卓Java版</string>
    <string name="tab_recommend">推荐</string>
    <string name="tab_official_account">大佬</string>
    <string name="tab_knowledge_structure">知识体系</string>
    <string name="tab_project">项目</string>
    <string name="tab_navigation">导航</string>
    <string name="err_unknown">未知错误</string>
    <string name="err_null_response">暂时无法获取数据，请稍候重试</string>
    <string name="err_time_out">网络连接失败，请检查您的网络</string>
    <string name="err_io_exception">暂时无法获取数据，请稍候重试</string>
    <string name="err_unknown_host">服务器暂时无法连接，请稍候重试</string>
</resources>