<?xml version="1.0" encoding="utf-8"?><!--unused now -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/my_bottom_tab"
    android:layout_width="match_parent"
    android:layout_height="@dimen/actionbar_height"
    android:background="@color/toolbar_background"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/my_content_root">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/my_bottom_tab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_recommend"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/my_bottom_tab2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/my_bottom_tab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_official_account"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/my_bottom_tab3"
        app:layout_constraintStart_toEndOf="@+id/my_bottom_tab1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/my_bottom_tab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_knowledge_structure"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/my_bottom_tab4"
        app:layout_constraintStart_toEndOf="@+id/my_bottom_tab2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/my_bottom_tab4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_project"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/my_bottom_tab5"
        app:layout_constraintStart_toEndOf="@+id/my_bottom_tab3"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/my_bottom_tab5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_navigation"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/my_bottom_tab4"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>